--- a/TestApp-MVC-Git-Azure/Views/Home/Index.cshtml
+++ b/TestApp-MVC-Git-Azure/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <div class="jumbotron">
     <h1>ASP.NET</h1>
-    <p class="lead">Welcome to the world of Azure WebApp</p>
+    <p class="lead">Welcome to the world of Azure WebApp sync via Github</p>
     <p><a href="http://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
 </div>
 
